show changelog after update of app
Signed-off-by: David Luhmer <david-dev@live.de>